--- a/index.css
+++ b/index.css
@@ -28,11 +28,17 @@ body {
 /*w3schools.com/css/css3_flexbox_container.asp#flex-direction*/
 .presentation {
   margin: 0;
-  margin-left: 0.4rem;
-  margin-right: 0.4rem;
+  margin-left: 0.5rem;
+  margin-right: 0.2rem;
   padding: 0;
-  padding-left: 0.2rem;
+  padding-left: 0.3rem;
   padding-right: 0.2rem;
+  display: grid;
+  justify-content: center;
+}
+
+.videog6 {
+  /* margin-left: 1rem; */
   display: grid;
   justify-content: center;
 }
