--- a/index.css
+++ b/index.css
@@ -1,17 +1,18 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+  font-size: small;
   color: white;
+  background-color: black;
+  margin: 0;
 }
 
 .title {
   text-align: center;
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-shadow: 1px 1px 9px red, 0 0 1em magenta, 0 0 0.5em magenta;
   background: rgb(8, 8, 8);
   margin: 0;
@@ -19,28 +20,29 @@ body {
 
 .subtitle {
   text-align: right;
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-shadow: 3px 3px 9px blue;
   margin: 0;
-  margin-right: 1rem;
+  margin-right: 10px;
+  padding-right: 10px;
 }
 
 /*w3schools.com/css/css3_flexbox_container.asp#flex-direction*/
 .presentation {
   margin: 0;
-  margin-left: 0.5rem;
-  margin-right: 0.2rem;
+  margin-left: 25px;
+  margin-right: 15px;
   padding: 0;
-  padding-left: 0.3rem;
-  padding-right: 0.2rem;
+  padding-left: 15px;
+  padding-right: 15px;
   display: grid;
   justify-content: center;
 }
 
 .videog6 {
-  /* margin-left: 1rem; */
+  margin-left: 11px;
   display: grid;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 a {
@@ -48,9 +50,11 @@ a {
   color: skyblue;
 }
 
- ul {
+ul {
   list-style: none;
   margin: 0;
+  padding: 10px;
+  text-align: left;
 }
 
 h3 {
@@ -67,14 +71,15 @@ h4 {
 h5 {
   margin: 0;
   margin-top: 1rem;
-  margin-left: 2rem;
+  margin-left: 20px;
 }
 
 .x5 li {
-  margin-left: 0.5rem;
+  margin-left: 25px;
   color: gray;
 }
 
 .spacer {
+  margin: 0;
   margin-top: 2rem;
 }
